brocode-rs/tui/src/status/snapshots/brocode_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Brocode (v0.118.0)                                       │
│                                                                     │
│ Visit https://chatgpt.com/brocode/settings/usage for up-to-date     │
│ information on rate limits and credits                              │
│                                                                     │
│  Model:            gpt-5.1-brocode (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                           │
│  Permissions:      Custom (read-only, on-request)                   │
│  Agents.md:        <none>                                           │
│                                                                     │
│  Token usage:      2K total  (1.4K input + 600 output)              │
│  Context window:   100% left (2.2K used / 272K)                     │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 09:25)   │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 09:55)   │
│  Credits:          38 credits                                       │
╰─────────────────────────────────────────────────────────────────────╯
