brocode-rs/tui/src/status/snapshots/brocode_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Brocode (v0.118.0)                                      │
│                                                                    │
│ Visit https://chatgpt.com/brocode/settings/usage for up-to-date    │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:            gpt-5.1-brocode-max (reasoning high, summaries  │
│  Directory: [[workspace]]                                          │
│  Permissions:      Custom (read-only, on-request)                  │
│  Agents.md:        <none>                                          │
│                                                                    │
│  Token usage:      1.9K total  (1K input + 900 output)             │
│  Context window:   100% left (2.25K used / 272K)                   │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
